--- a/frontend/src/app/managementportal/components/kamers/kamers-form/kamers-form.component.html
+++ b/frontend/src/app/managementportal/components/kamers/kamers-form/kamers-form.component.html
@@ -94,7 +94,7 @@
           <button
             type="button"
             class="btn btn-outline-dark"
-            (click)="activeModal.close()"
+            (click)="activeModal.dismiss('Cancel')"
           >
             Annuleren
           </button>
