delete werkt in reserveringen

--- a/frontend/src/app/managementportal/components/activiteiten/activiteit-reserveringen/activiteit-reserveringen.component.html
+++ b/frontend/src/app/managementportal/components/activiteiten/activiteit-reserveringen/activiteit-reserveringen.component.html
@@ -31,7 +31,7 @@
                         class="fas fa-trash-alt mr-2"
                         placement="top"
                         ngbTooltip="Verwijderen"
-                        (click)="verwijderActiviteitRes(reservering)"
+                        (click)="openFormDeleteActiviteitReservering(reservering.resid)"
                     ></i>
                 </td>
             </tr>
