--- a/frontend/src/app/shared/components/form-activiteitplanning/form-activiteitplanning.component.html
+++ b/frontend/src/app/shared/components/form-activiteitplanning/form-activiteitplanning.component.html
@@ -1,3 +1,81 @@
-<p>
-  form-activiteitplanning works!
-</p>
+<div class="modal-header">
+  <h4 class="modal-title" id="modal-basic-title">
+    Planning
+  </h4>
+  <button type="button" class="close" aria-label="Close" (click)="activeModal.dismiss('cancel')">
+    <span aria-hidden="true">&times;</span>
+  </button>
+</div>
+<div class="modal-body">
+  <form [formGroup]="activiteitenPlanningForm">
+    <div class="form-group">
+      <label>Activiteit</label>
+      <input
+        disabled="true"
+        type="string"
+        class="form-control"
+        formControlName="actNaam"
+        [class.is-invalid]="activiteitenPlanningForm.controls.actNaam?.invalid && activiteitenPlanningForm.controls.actNaam?.touched"
+      />
+      <small
+        class="text-danger d-none"
+        [class.d-block]="activiteitenPlanningForm.controls.actNaam?.invalid && activiteitenPlanningForm.controls.actNaam?.touched"
+      >
+      Activiteit is verplicht
+      </small>    </div>
+    <div class="form-group">
+      <label for="inputDateFrom">Datum activiteit</label>
+      <input
+        type="date"
+        class="form-control"
+        formControlName="actdate"
+        [class.is-invalid]="activiteitenPlanningForm.controls.actdate?.invalid && activiteitenPlanningForm.controls.actdate?.touched"
+      />
+      <small
+        class="text-danger d-none"
+        [class.d-block]="activiteitenPlanningForm.controls.actdate?.invalid && activiteitenPlanningForm.controls.actdate?.touched"
+      >
+        Datum is verplicht
+      </small>
+    </div>
+    <div class="form-group">
+      <label>Prijs</label>
+      <input
+        type="number"
+        class="form-control"
+        formControlName="actprijs"
+        [class.is-invalid]="activiteitenPlanningForm.controls.actprijs?.invalid && activiteitenPlanningForm.controls.actprijs?.touched"
+      />
+      <small
+        class="text-danger d-none"
+        [class.d-block]="activiteitenPlanningForm.controls.actprijs?.invalid && activiteitenPlanningForm.controls.actprijs?.touched"
+      >
+        Prijs is verplicht
+      </small>
+    </div>
+    <div class="form-group">
+      <label>Capaciteit</label>
+      <input
+        type="number"
+        class="form-control"
+        formControlName="actcapaciteit"
+        [class.is-invalid]="
+          activiteitenPlanningForm.controls.actcapaciteit?.invalid && activiteitenPlanningForm.controls.actcapaciteit?.touched
+        "
+      />
+      <small
+        class="text-danger d-none"
+        [class.d-block]="
+          activiteitenPlanningForm.controls.actcapaciteit?.invalid && activiteitenPlanningForm.controls.actcapaciteit?.touched
+        "
+      >
+        Capaciteit is verplicht
+      </small>
+    </div>
+  </form>
+  <div class="modal-footer">
+    <button type="button" class="btn btn-success" (click)="submitForm()" [disabled]="activiteitenPlanningForm.invalid">
+      Save
+    </button>
+  </div>
+</div>
