--- a/frontend/src/app/managementportal/components/activiteiten/activiteiten.component.html
+++ b/frontend/src/app/managementportal/components/activiteiten/activiteiten.component.html
@@ -1,10 +1,7 @@
 <div class="d-flex justify-content-end mt-2">
-    <button
-        class="btn btn-primary mt-2"
-        (click)="openFormSaveActiviteit()"
-    >
-        Toevoegen nieuwe activiteit
-    </button>
+  <button class="btn btn-primary mt-2" (click)="openFormSaveActiviteit()">
+    Toevoegen nieuwe activiteit
+  </button>
 </div>
 
 <!-- <form>
@@ -14,37 +11,33 @@
 </form> -->
 
 <div class="table-responsive mt-2">
-    <table class="table table-striped table-sm">
-        <thead>
-            <tr>
-                <th class="handCursor" (click)="clickColumnHandler('naam')">Naam<i class="fa fa-fw fa-sort"></i></th>
-                <th class="handCursor" (click)="clickColumnHandler('beschrijving')">Beschrijving<i class="fa fa-fw fa-sort"></i></th>
-                <th></th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr *ngFor="let activiteit of (activiteiten$ | async | activiteitFilter: show | sortgrid:field)">
-            <!-- <tr *ngFor="let activiteit of (activiteiten$ | activiteitFilter: show | sortgrid:field) | async; index as i "> -->
-                <!-- <th scope="row">{{ i + 1 }}</th> -->
-                <td>{{ activiteit.naam }}</td>
-                <td>{{ activiteit.beschrijving }}</td>
-                <!-- <td><ngb-highlight [result]="activiteit.naam | number" [term]="filter.value"></ngb-highlight></td> -->
-                <!-- <td><ngb-highlight [result]="activiteit.beschrijving | number" [term]="filter.value"></ngb-highlight></td> -->
-                <td class="text-align: right">
-                    <i
-                        class="fas fa-edit mr-2"
-                        placement="top"
-                        ngbTooltip="Wijzigen"
-                        (click)="openFormUpdateActiviteit(activiteit)"
-                    ></i>
-                    <i
-                        class="fas fa-trash-alt mr-2"
-                        placement="top"
-                        ngbTooltip="Verwijderen"
-                        (click)="openFormDeleteActiviteit(activiteit.actid)"
-                    ></i>
-                </td>
-            </tr>
-        </tbody>
-    </table>
+  <table class="table table-striped table-sm">
+    <thead>
+      <tr>
+        <th class="handCursor" (click)="clickColumnHandler('naam')">Naam<i class="fa fa-fw fa-sort"></i></th>
+        <th class="handCursor" (click)="clickColumnHandler('beschrijving')">Beschrijving<i class="fa fa-fw fa-sort"></i></th>
+        <th></th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr *ngFor="let activiteit of (activiteiten$ | async | activiteitFilter: show | sortgrid: field)">
+        <!-- <tr *ngFor="let activiteit of (activiteiten$ | activiteitFilter: show | sortgrid:field) | async; index as i "> -->
+        <!-- <th scope="row">{{ i + 1 }}</th> -->
+        <td>{{ activiteit.naam }}</td>
+        <td>{{ activiteit.beschrijving }}</td>
+        <!-- <td><ngb-highlight [result]="activiteit.naam | number" [term]="filter.value"></ngb-highlight></td> -->
+        <!-- <td><ngb-highlight [result]="activiteit.beschrijving | number" [term]="filter.value"></ngb-highlight></td> -->
+        <td class="text-align: right">
+          <i class="fas fa-pen-alt mr-2" placement="top" ngbTooltip="Maak planning" (click)="openCreatePlanning(activiteit)"></i>
+          <i class="fas fa-edit mr-2" placement="top" ngbTooltip="Wijzigen" (click)="openFormUpdateActiviteit(activiteit)"></i>
+          <i
+            class="fas fa-trash-alt mr-2"
+            placement="top"
+            ngbTooltip="Verwijderen"
+            (click)="openFormDeleteActiviteit(activiteit.actid)"
+          ></i>
+        </td>
+      </tr>
+    </tbody>
+  </table>
 </div>
