--- a/frontend/src/app/shared/components/form-activiteit-maak-planning/form-activiteit-maak-planning.component.html
+++ b/frontend/src/app/shared/components/form-activiteit-maak-planning/form-activiteit-maak-planning.component.html
@@ -1,6 +1,6 @@
 <div class="modal-header">
     <h4 class="modal-title" id="modal-basic-title">
-      Planning
+      Maak een planning van een activiteit
     </h4>
     <button type="button" class="close" aria-label="Close" (click)="activeModal.dismiss('cancel')">
       <span aria-hidden="true">&times;</span>
@@ -11,6 +11,7 @@
       <div class="form-group">
         <label>Activiteit</label>
         <input
+          disabled="true"
           type="string"
           class="form-control"
           formControlName="actNaam"
@@ -27,12 +28,12 @@
         <input
           type="date"
           class="form-control"
-          formControlName="actdate"
-          [class.is-invalid]="activiteitenMaakPlanningForm.controls.actdate?.invalid && activiteitenMaakPlanningForm.controls.actdate?.touched"
+          formControlName="actDate"
+          [class.is-invalid]="activiteitenMaakPlanningForm.controls.actDate?.invalid && activiteitenMaakPlanningForm.controls.actDate?.touched"
         />
         <small
           class="text-danger d-none"
-          [class.d-block]="activiteitenMaakPlanningForm.controls.actdate?.invalid && activiteitenMaakPlanningForm.controls.actdate?.touched"
+          [class.d-block]="activiteitenMaakPlanningForm.controls.actDate?.invalid && activiteitenMaakPlanningForm.controls.actDate?.touched"
         >
           Datum is verplicht
         </small>
@@ -42,12 +43,12 @@
         <input
           type="number"
           class="form-control"
-          formControlName="actprijs"
-          [class.is-invalid]="activiteitenMaakPlanningForm.controls.actprijs?.invalid && activiteitenMaakPlanningForm.controls.actprijs?.touched"
+          formControlName="actPrijs"
+          [class.is-invalid]="activiteitenMaakPlanningForm.controls.actPrijs?.invalid && activiteitenMaakPlanningForm.controls.actPrijs?.touched"
         />
         <small
           class="text-danger d-none"
-          [class.d-block]="activiteitenMaakPlanningForm.controls.actprijs?.invalid && activiteitenMaakPlanningForm.controls.actprijs?.touched"
+          [class.d-block]="activiteitenMaakPlanningForm.controls.actPrijs?.invalid && activiteitenMaakPlanningForm.controls.actPrijs?.touched"
         >
           Prijs is verplicht
         </small>
@@ -57,15 +58,15 @@
         <input
           type="number"
           class="form-control"
-          formControlName="actcapaciteit"
+          formControlName="actCapaciteit"
           [class.is-invalid]="
-            activiteitenMaakPlanningForm.controls.actcapaciteit?.invalid && activiteitenMaakPlanningForm.controls.actcapaciteit?.touched
+            activiteitenMaakPlanningForm.controls.actCapaciteit?.invalid && activiteitenMaakPlanningForm.controls.actCapaciteit?.touched
           "
         />
         <small
           class="text-danger d-none"
           [class.d-block]="
-            activiteitenMaakPlanningForm.controls.actcapaciteit?.invalid && activiteitenMaakPlanningForm.controls.actcapaciteit?.touched
+            activiteitenMaakPlanningForm.controls.actCapaciteit?.invalid && activiteitenMaakPlanningForm.controls.actCapaciteit?.touched
           "
         >
           Capaciteit is verplicht
