--- a/frontend/src/app/managementportal/components/activiteiten/activiteiten-planning/activiteiten-planning.component.html
+++ b/frontend/src/app/managementportal/components/activiteiten/activiteiten-planning/activiteiten-planning.component.html
@@ -16,11 +16,11 @@
                 <td>
                     {{ activiteitplanning.activiteit.naam }}
                 </td>
-                <td>{{ activiteitplanning.actdate }}</td>
+                <td>{{ activiteitplanning.actDate }}</td>
                 <td>
-                    {{ activiteitplanning.actprijs | currency: "EUR" }}
+                    {{ activiteitplanning.actPrijs | currency: "EUR" }}
                 </td>
-                <td>{{ activiteitplanning.actcapaciteit }}</td>
+                <td>{{ activiteitplanning.actCapaciteit }}</td>
                 <td class="text-align: right">
                     <i
                         class="fas fa-pen-alt mr-2"
