--- a/frontend/src/app/shared/components/form-activiteitplanning/form-activiteitplanning.component.html
+++ b/frontend/src/app/shared/components/form-activiteitplanning/form-activiteitplanning.component.html
@@ -28,12 +28,12 @@
       <input
         type="date"
         class="form-control"
-        formControlName="actdate"
-        [class.is-invalid]="activiteitenPlanningForm.controls.actdate?.invalid && activiteitenPlanningForm.controls.actdate?.touched"
+        formControlName="actDate"
+        [class.is-invalid]="activiteitenPlanningForm.controls.actDate?.invalid && activiteitenPlanningForm.controls.actDate?.touched"
       />
       <small
         class="text-danger d-none"
-        [class.d-block]="activiteitenPlanningForm.controls.actdate?.invalid && activiteitenPlanningForm.controls.actdate?.touched"
+        [class.d-block]="activiteitenPlanningForm.controls.actDate?.invalid && activiteitenPlanningForm.controls.actDate?.touched"
       >
         Datum is verplicht
       </small>
@@ -43,12 +43,12 @@
       <input
         type="number"
         class="form-control"
-        formControlName="actprijs"
-        [class.is-invalid]="activiteitenPlanningForm.controls.actprijs?.invalid && activiteitenPlanningForm.controls.actprijs?.touched"
+        formControlName="actPrijs"
+        [class.is-invalid]="activiteitenPlanningForm.controls.actPrijs?.invalid && activiteitenPlanningForm.controls.actPrijs?.touched"
       />
       <small
         class="text-danger d-none"
-        [class.d-block]="activiteitenPlanningForm.controls.actprijs?.invalid && activiteitenPlanningForm.controls.actprijs?.touched"
+        [class.d-block]="activiteitenPlanningForm.controls.actPrijs?.invalid && activiteitenPlanningForm.controls.actPrijs?.touched"
       >
         Prijs is verplicht
       </small>
@@ -58,15 +58,15 @@
       <input
         type="number"
         class="form-control"
-        formControlName="actcapaciteit"
+        formControlName="actCapaciteit"
         [class.is-invalid]="
-          activiteitenPlanningForm.controls.actcapaciteit?.invalid && activiteitenPlanningForm.controls.actcapaciteit?.touched
+          activiteitenPlanningForm.controls.actCapaciteit?.invalid && activiteitenPlanningForm.controls.actCapaciteit?.touched
         "
       />
       <small
         class="text-danger d-none"
         [class.d-block]="
-          activiteitenPlanningForm.controls.actcapaciteit?.invalid && activiteitenPlanningForm.controls.actcapaciteit?.touched
+          activiteitenPlanningForm.controls.actCapaciteit?.invalid && activiteitenPlanningForm.controls.actCapaciteit?.touched
         "
       >
         Capaciteit is verplicht
